<resources>
    <string name="app_name">FairNet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_test">RUN</string>
    <string name="wait">Please wait</string>
    <string name="Video">Video</string>
    <string name="Audio">Audio</string>
    <string name="speed_comparison">Speed comparison</string>
    <string name="Wynk">Wynk</string>
    <string name="Spotify">Spotify</string>
    <string name="Saavn">Saavn</string>
    <string name="GAANA_COM">GAANA.COM</string>
    <string name="done">Done</string>
    <string name="accept">ACCEPT</string>
    <string name="consent">I hereby give my consent to use measurement results collected by  FairNet App for academic research. \n\nTo record your service provider, we require permission for phone and contact. We use this permission to only record your service provider and not read your contacts. </string>
    <string name="primemusic">PRIMEMUSIC</string>
    <string name="google_play_music">Google Play Music</string>
    <string name="run">Run</string>
    <string name="gaana_com">GAANA.COM</string>
    <string name="wynk">WYNK</string>
    <string name="spotify">SPOTIFY</string>
    <string name="saavn">SAAVN</string>
    <string name="hotstar">HOTSTAR</string>
    <string name="netflix">NETFLIX</string>
    <string name="youtube">YOUTUBE</string>
    <string name="primevideo">PRIMEVIDEO</string>
    <string name="mxplayer">MXPlayer</string>
    <string name="next">NEXT</string>
    <string name="google_play_movies">Google Play Movies</string>
    <string name="voot">VOOT</string>
    <string name="zee5">ZEE5</string>
    <string name="erosnow">EROS NOW</string>
    <string name="sony_liv">SONY LIV</string>
    <string name="hungama">Hungama</string>
    <string name="TDDetectNotification">Detecting traffic differentiation</string>
    <string name="results">Results</string>
</resources>
