<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectVideoService">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/HSRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="0"
            android:text="@string/hotstar" />

        <RadioButton
            android:id="@+id/NFRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/netflix" />

        <RadioButton
            android:id="@+id/YTRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/youtube" />

        <RadioButton
            android:id="@+id/PVRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/primevideo" />

        <RadioButton
            android:id="@+id/MXRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/mxplayer" />

        <RadioButton
            android:id="@+id/HMRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/hungama" />

        <RadioButton
            android:id="@+id/VTRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/voot" />

        <RadioButton
            android:id="@+id/Z5RButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/zee5" />

        <RadioButton
            android:id="@+id/ENRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/erosnow" />

        <RadioButton
            android:id="@+id/SLRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/sony_liv" />
    </RadioGroup>

    <Button
        android:id="@+id/NButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="mcl_select_video_service_compare"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>